<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/reg_title"
        />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_user_name"
        android:layout_margin="20dp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/user_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_user_surname"
        android:layout_margin="20dp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/reg_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_pw"
        android:layout_margin="20dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/reg_pw_wdh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_pw_wdh"
        android:layout_margin="20dp"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/mainCyan"
            android:textColor="@android:color/white"
            android:elevation="1dp"
            />

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_btn"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/mainCyan"
            android:textColor="@android:color/white"
            android:elevation="1dp" />
    </LinearLayout>

</LinearLayout>