<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:id="@+id/reg_p_txt"
        android:text="@string/reg_title_patient_new" />


    <EditText
            android:id="@+id/reg_p_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_p_name"
            android:layout_margin="20dp"
            android:inputType="textCapWords"
            />

        <EditText
            android:id="@+id/reg_p_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_p_surname"
            android:layout_margin="20dp"
            android:inputType="textPersonName"
           />

    <EditText
        android:id="@+id/reg_p_bday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_p_bday"
        android:layout_margin="20dp"
        android:inputType="date"
        android:onClick="datePicker"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <CheckBox
                android:text="@string/reg_p_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_p_checkBox_female"
                android:layout_margin="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1" />


            <CheckBox
                android:text="@string/reg_p_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_p_checkBox_male"
                android:layout_margin="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1" />




    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reg_p_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/mainCyan"
            android:textColor="@android:color/white"
            android:elevation="1dp" />

        <Button
            android:id="@+id/reg_p_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_btn"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/mainCyan"
            android:textColor="@android:color/white"
            android:elevation="1dp" />
    </LinearLayout>

</LinearLayout>