<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.tum.mw.ftm.praktikum.androidapp_strohhalm.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:srcCompat="@drawable/strohhalm_transparent"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView3"
        tools:layout_width="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/log_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_user"
            android:layout_margin="20dp"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/log_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_pw"
            android:layout_margin="20dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/log_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_btn"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@color/mainCyan"
            android:textColor="@android:color/white"
            android:elevation="1dp" />


    </LinearLayout>
</RelativeLayout>